--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+    --default-size: 3rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'IBM Plex Sans', sans-serif;
+}
+
+.display-inline {
+    display: inline-block;
+}
+
+.container--centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+
+.wallet {
+    background-color: white;
+    height: 50vh;
+}
+
+.wallet--bottom {
+    background-color: #eeeeee;
+}
+
+.wallet__content {
+}
+
+.currencies__dropdown {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: transparent;
+    border: none;
+    font-size: var(--default-size);
+    padding-right: calc(var(--default-size) / 2);
+}
+
+.currencies__dropdown::after {
+    content: ">";
+}
+
+.currencies__dropdown:focus, .amount__input:focus {
+    outline: none;
+}
+
+.currencies__dropdown::-ms-expand {
+    display: none;
+}
+
+.currencies__arrow-down {
+    width: calc(var(--default-size) / 2);
+    height: calc(var(--default-size) / 2);
+    margin: calc(var(--default-size) / 4);
+    right: calc(var(--default-size) / 2);
+    top: calc(var(--default-size) / 6);
+    position: relative;
+}
+
+.amount__input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: transparent;
+    border: none;
+    font-size: var(--default-size);
+    text-align: right;
 }
