--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'IBM Plex Sans', sans-serif;
+    text-align: center;
 }
 
 .display-inline {
