--- a/src/index.css
+++ b/src/index.css
@@ -182,6 +182,14 @@ body {
     top: 1px;
 }
 
+.exchange-button:disabled,
+.exchange-button[disabled], .exchange-button[disabled]:hover{
+    background-color: #ccc;
+    cursor: auto;
+}
+
+
+
 .bottom-area {
     position: absolute;
     top: 90vh;
