--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@ body {
     flex: 1;
 }
 
+.flex-container__col--doubled {
+    flex-grow: 2;
+}
+
 .flex-container--centered {
     justify-content: center;
     align-items: center;
@@ -63,17 +67,6 @@ body {
     width: 90%;
 }
 
-.exchange-rate {
-    background-color: white;
-    padding: 13px 0;
-    color: var(--blue);
-}
-
-.exchange-rate--gray-border {
-    border: 2px solid var(--gray);
-    border-radius: 25px;
-}
-
 .swap {
     background-color: white;
     padding: 5px 9px;
@@ -103,42 +96,6 @@ body {
     width: 100%;
     top: 48vh;
 }
-
-.exchange-button {
-    background-color: #f02bab;
-    border-radius: 31px;
-    display: inline-block;
-    cursor: pointer;
-    color: #ffffff;
-    font-size: 1rem;
-    padding: 1rem 2rem;
-    text-decoration: none;
-    border: none;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-
-}
-
-.exchange-button:hover {
-    background-color: #f069dc;
-}
-
-.exchange-button:focus {
-    outline: none;
-}
-
-.exchange-button:active {
-    position: relative;
-    top: 1px;
-}
-
-.exchange-button:disabled,
-.exchange-button[disabled], .exchange-button[disabled]:hover{
-    background-color: #ccc;
-    cursor: auto;
-}
-
-
 
 .bottom-area {
     position: absolute;
